--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -446,14 +446,14 @@
 
 # <include>标签允许您将文件的内容或命令的输出包含在配置文件中,此标签可以根据需要多次定义.
 # 模块配置文件
-<include executable="https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf"
+<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf"
          noenv="yes"
          noexec="no"
          noinclude="no"
          missingokay="no">
 
 # codepage模块所导入的ascii格式
-<include executable="https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/ascii.conf"
+<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/ascii.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
@@ -461,7 +461,7 @@
          missingokay="no">
 
 # 帮助文件
-<include executable="https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf"
+<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
