--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -197,6 +197,7 @@
 
 
 # 注意: 下面配置仅在 INSPIRCD 编译时启用 相关模块 支持时可用
+# 注意: 对于这些预编译模块中的路径使用 官方建议使用绝对路径 如:&dir.config;/conf/XXX.xxx
 #-#-#-#-#-#-#-#-#-#Extra 模块配置-#-#-#-#-#-#-#-#
 # 请自行参考官方配置后补充配置 对应模块:argon2 // geo_maxmind
 
