--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -226,10 +226,7 @@
         trigger="95.5">
 
 #<badnick>标签定义了永久Q线.此标签可以根据需要定义多次.
-<badnick nick="ChanServ" reason="为网络服务保留">
-<badnick nick="NickServ" reason="为网络服务保留">
-<badnick nick="OperServ" reason="为网络服务保留">
-<badnick nick="MemoServ" reason="为网络服务保留">
+<badnick nick="root" reason="为防止攻击保留">
 
 #<badip>标签定义了永久Z线.此标签可以根据需要定义多次.
 <badip ipmask="172.16.0.0" reason="为防止攻击保留">
