--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -464,3 +464,11 @@
          noinclude="no"
          mandatorytag="helpmsg"
          missingokay="no">
+
+# 预留的别名和昵称
+<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/generic.conf"
+         noenv="yes"
+         noexec="yes"
+         noinclude="no"
+         mandatorytag="alias"
+         missingokay="no">
