--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -457,6 +457,14 @@
          mandatorytag="helpmsg"
          missingokay="no">
 
+# 帮助文件
+<include file="&ConfPath;/generic.conf"
+         noenv="yes"
+         noexec="yes"
+         noinclude="no"
+         mandatorytag="alias"
+         missingokay="no">
+
 # 管理员配置文件
 <include file="&ConfPath;/opers.conf"
          noenv="yes"
