--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -38,16 +38,17 @@
 #-#-#-#-#-#-#-#-#-#-#-#-#端口设置#-#-#-#-#-#-#-#-#-#-#-#-#
 # <bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
 <bind port="6667,6668,6669"
-      protocols="all"
       type="clients">
 <bind port="6697"
-      protocols="all"
       sslprofile="Clients"
       type="clients">
 <bind port="6666"
       type="clients"
       hook="websocket"
       sslprofile="Websocket">
+<bind port="7000"
+      type="servers"
+      sslprofile="Servers">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#连接设置#-#-#-#-#-#-#-#-#-#-#-#-#
