--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -469,5 +469,5 @@
          noenv="yes"
          noexec="yes"
          noinclude="no"
-         #mandatorytag="oper"
+         mandatorytag="oper"
          missingokay="no">
