--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -206,6 +206,10 @@
      port="6697"
      preload="yes">
 
+<gateway type="webirc"
+         password="$2a$12$hLhV4qchwBSsfshDkOC95e1QZ22DySloJPfgDmGZBtKDuHlwdFmhO"
+         hash="bcrypt"
+         mask="*">
 
 # 注意: 下面配置仅在 INSPIRCD 编译时启用 相关模块 支持时可用
 #-#-#-#-#-#-#-#-#-#Extra 模块配置-#-#-#-#-#-#-#-#
