--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -195,6 +195,11 @@
            nativeping="yes" 
            proxyranges="*"> 
 
+<gateway type="webirc"
+         password="$2a$12$hLhV4qchwBSsfshDkOC95e1QZ22DySloJPfgDmGZBtKDuHlwdFmhO"
+         hash="bcrypt"
+         mask="*">
+
 
 # 注意: 下面配置仅在 INSPIRCD 编译时启用 相关模块 支持时可用
 # 注意: 对于这些预编译模块中的路径使用 官方建议使用绝对路径 如:&dir.config;/conf/XXX.xxx
