--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -403,7 +403,7 @@
 <module name="silence">
 <module name="spanningtree">
 #<module name="sqlauth">
-<module name="sqloper">
+#<module name="sqloper">
 <module name="sslinfo">
 <module name="sslmodes">
 <module name="starttls">
@@ -429,7 +429,7 @@
 <module name="regex_pcre2">
 <module name="regex_posix">
 <module name="regex_re2">
-<module name="sqlite3">
+#<module name="sqlite3">
 <module name="ssl_gnutls">
 #<module name="ssl_openssl">
 <module name="sslrehashsignal">
@@ -472,4 +472,12 @@
          noexec="yes"
          noinclude="no"
          mandatorytag="alias"
+         missingokay="no">
+
+# 管理员配置文件
+<include executable="curl -L --silent --anyauth --user XXX:XXX https://XXX/opers.conf"
+         noenv="yes"
+         noexec="yes"
+         noinclude="no"
+         mandatorytag="oper"
          missingokay="no">
