--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -475,7 +475,7 @@
          missingokay="no">
 
 # 管理员配置文件
-<include executable="curl -L --silent --anyauth --user XXX:XXX https://XXX/opers.conf"
+<include executable="curl -L --silent --anyauth --user ##修改为用户名##:##修改为密码## https://XXX/opers.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
