--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -24,7 +24,7 @@
 #-#-#-#-#-#-#-#-#-#-#-#-#服务器描述#-#-#-#-#-#-#-#-#-#-#-#-#
 # <server>标签定义了本地服务器的设置.此标签只能定义一次.
 <server name="&Domain;"
-        description="ARKFUTURE-NET"
+        description="ARKFUTURE-NET IRC server"
         network="ARKFUTURE"
         id="0AF">
 
