--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -39,16 +39,13 @@
 # <bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
 <bind port="6667,6668,6669"
       type="clients">
-<bind port="6697"
-      sslprofile="Clients"
-      type="clients">
-<bind port="6666"
-      type="clients"
-      hook="websocket"
-      sslprofile="Websocket">
-<bind port="7000"
-      type="servers"
-      sslprofile="Servers">
+
+<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/bind.conf"
+         noenv="yes"
+         noexec="yes"
+         noinclude="no"
+         mandatorytag="connect"
+         missingokay="no">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#连接设置#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -73,7 +70,7 @@
          hash="bcrypt"
          usecloak="yes"
          useconnectban="yes"
-         modes="+iwx"
+         modes="+cixwS"
          motd="motd">  
 
 <connect name="Basic"
@@ -81,6 +78,13 @@
          allow="*"
          usests="no"
          port="6667,6668,6669">
+
+<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/connect.conf"
+         noenv="yes"
+         noexec="yes"
+         noinclude="no"
+         mandatorytag="connect"
+         missingokay="no">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#操作员设置#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -133,27 +137,12 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#服务器选项#-#-#-#-#-#-#-#-#-#-#-#-#
-# <options>标签定义了常规设置选项.此标签只能定义一次.
-<options cyclehostsfromuser="no"
-         defaultbind="auto"
-         defaultmodes="nost"
-         exemptchanops=""
-         extbanformat="name"
-         fixedpart=""
-         fixedquit=""
-         invitebypassmodes="yes"
-         nosnoticestack="no"
-         maskinlist="yes"
-         maskintopic="yes"
-         modesinlist="yes"
-         prefixpart="&quot;"
-         prefixquit="Quit: "
-         splitwhois="no"
-         suffixpart="&quot;"
-         suffixquit=""
-         syntaxhints="yes"
-         xlinemessage="您已被禁止, 如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息."
-         xlinequit="您因 %fulltype% 被限制, 此限制于 %created% 创建, 将持续 %duration%, 预计 %expiry% 到期. 设置者为 %setter%, 原因是：%reason%.  如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息.">
+<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/options.conf"
+         noenv="yes"
+         noexec="yes"
+         noinclude="no"
+         mandatorytag="options"
+         missingokay="no">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#安全设置#-#-#-#-#-#-#-#-#-#-#-#
@@ -174,7 +163,7 @@
 
 # <exception>标签定义了服务器永久性例外规则,允许特定主机绕过全局限制.此标签可以根据需要定义多次.
 <exception host="127.0.0.1"
-           reason="例外规则">
+           reason="管理员主机">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#性能设置#-#-#-#-#-#-#-#-#-#-#
@@ -444,14 +433,14 @@
 
 # <include>标签允许您将文件的内容或命令的输出包含在配置文件中,此标签可以根据需要多次定义.
 # 模块配置文件
-<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf"
+<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/modules.conf"
          noenv="yes"
          noexec="no"
          noinclude="no"
          missingokay="no">
 
 # codepage模块所导入的ascii格式
-<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/ascii.conf"
+<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/ascii.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
@@ -459,7 +448,7 @@
          missingokay="no">
 
 # 帮助文件
-<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf"
+<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/helpop.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
@@ -467,7 +456,7 @@
          missingokay="no">
 
 # 预留的别名和昵称
-<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/conf/generic.conf"
+<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/generic.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
