--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -164,7 +164,7 @@
 
 # <exception>标签定义了服务器永久性例外规则,允许特定主机绕过全局限制.此标签可以根据需要定义多次.
 <exception host="127.0.0.1"
-           reason="例外规则">
+           reason="管理员主机">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#性能设置#-#-#-#-#-#-#-#-#-#-#
@@ -434,7 +434,7 @@
 
 # <include>标签允许您将文件的内容或命令的输出包含在配置文件中,此标签可以根据需要多次定义.
 # 模块配置文件
-<include file="&ConfPath;/modulesconf.conf"
+<include file="&ConfPath;/modules.conf"
          noenv="yes"
          noexec="no"
          noinclude="no"
