upgrade inspircd4.7 config

--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -1,5 +1,5 @@
 # Inspircd conf ---UTF-8 ---Security configuration ---v4.7BasicConfigure
-# 这只是一个基础的设置文件 它可能需要根据您的需求进行调整
+# 这只是一个基础的设置(模板)文件 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 # !!!!我们注释掉了预编译的模块!!!!
 
@@ -21,7 +21,7 @@
 <define name="Domain" value="arkfuture.test">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#服务器描述#-#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#服务器信息#-#-#-#-#-#-#-#-#-#-#-#-#
 # <server>标签定义了本地服务器的设置.此标签只能定义一次.
 <server name="&Domain;"
         description="ARKFUTURE-NET IRC server"
@@ -110,6 +110,13 @@
 
 
 #-#-#-#-#-#-#-#-#-#-杂项设置-#-#-#-#-#-#-#-#-#-#
+# <include>标签允许您将文件的内容或命令的输出包含在配置文件中,此标签可以根据需要多次定义.
+# <files><execfiles>标签读取一个或多个文件.这两个标签只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
+<files motd="&TxtPath;/motd.txt"
+       opermotd="&TxtPath;/opermotd.txt"
+       quotes="&TxtPath;/quotes.txt"
+       rules="&TxtPath;/rules.txt">
+       
 # <dns>标签定义了在查找主机名时要使用的DNS服务器.此标签只能定义一次.
 <dns enabled="yes"
      timeout="5s">
@@ -176,7 +183,7 @@
              timeskipwarn="2s">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#WHOWAS选项#-#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#WHOWAS设置#-#-#-#-#-#-#-#-#-#-#-#-#
 # <whowas>标签定义了/WHOWAS数据库的设置.此标签只能定义一次.
 <whowas groupsize="10"
         maxgroups="10000"
@@ -230,7 +237,7 @@
          limit="100000">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#日志相关#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#日志设置#-#-#-#-#-#-#-#-#-#-#-#
 <log method="file"
      type="* -USERINPUT -USEROUTPUT"
      level="normal"
@@ -238,7 +245,7 @@
      flush="200">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#模块#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#模块设置#-#-#-#-#-#-#-#-#-#-#-#
 # 请阅读 https://docs.inspircd.org/4/modules/ 并根据您的需求加载模块
 ######Default Modules List
 <module name="abbreviation">
@@ -425,14 +432,7 @@
 #<module name="sslrehashsignal">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#文件包含及读取#-#-#-#-#-#-#-#-#-#-#-#
-# <files><execfiles>标签读取一个或多个文件.这两个标签只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
-<files motd="&TxtPath;/motd.txt"
-       opermotd="&TxtPath;/opermotd.txt"
-       quotes="&TxtPath;/quotes.txt"
-       rules="&TxtPath;/rules.txt">
-
-# <include>标签允许您将文件的内容或命令的输出包含在配置文件中,此标签可以根据需要多次定义.
+#-#-#-#-#-#-#-#-#-#-#-#-#其他#-#-#-#-#-#-#-#-#-#-#-#
 # 模块配置文件
 <include file="&ConfPath;/modules.conf"
          noenv="yes"
@@ -456,7 +456,7 @@
          mandatorytag="helpmsg"
          missingokay="no">
 
-# 帮助文件
+# 预留的别名和昵称
 <include file="&ConfPath;/generic.conf"
          noenv="yes"
          noexec="yes"
@@ -464,7 +464,7 @@
          mandatorytag="alias"
          missingokay="no">
 
-# 管理员配置文件
+
 <include file="&ConfPath;/opers.conf"
          noenv="yes"
          noexec="yes"
