--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -1,5 +1,5 @@
 # Inspircd conf ---UTF-8 ---Security configuration ---v4.7ARKFUTUREConfigure
-# 这只是一个基础的设置文件 它可能需要根据您的需求进行调整
+# ARKFUTURE配置, 您可以根据您需要而修改
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 
 # 您可以在以下文档中查询详细设置来完善此设置,我们的设置基于官方文档
@@ -20,7 +20,7 @@
 <define name="Domain" value="arkfuture.test">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#服务器描述#-#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#服务器信息#-#-#-#-#-#-#-#-#-#-#-#-#
 # <server>标签定义了本地服务器的设置.此标签只能定义一次.
 <server name="&Domain;"
         description="ARKFUTURE-NET IRC server"
@@ -70,7 +70,7 @@
          hash="bcrypt"
          usecloak="yes"
          useconnectban="yes"
-         modes="+cixwS"
+         modes="+iwx"
          motd="motd">  
 
 <connect name="Basic"
@@ -124,6 +124,12 @@
 
 
 #-#-#-#-#-#-#-#-#-#-杂项设置-#-#-#-#-#-#-#-#-#-#
+# <include>标签允许您将文件的内容或命令的输出包含在配置文件中,此标签可以根据需要多次定义.
+# <files><execfiles>标签读取一个或多个文件.这两个标签只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
+<execfiles motd="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/motd.txt"
+           opermotd="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/opermotd.txt"
+           quotes="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/quotes.txt"
+           rules="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/rules.txt">
 # <dns>标签定义了在查找主机名时要使用的DNS服务器.此标签只能定义一次.
 <dns enabled="yes"
      timeout="5s">
@@ -133,7 +139,7 @@
       ipv6clone="128">
 
 # <pid>标签定义了pid文件的位置.此标签只能定义一次.
-<pid executable="/var/run/inspircd/inspircd.pid">
+<pid file="/var/run/inspircd/inspircd.pid">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#服务器选项#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -175,7 +181,7 @@
              timeskipwarn="2s"> 
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#WHOWAS选项#-#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#WHOWAS设置#-#-#-#-#-#-#-#-#-#-#-#-#
 # <whowas>标签定义了/WHOWAS数据库的设置.此标签只能定义一次.
 <whowas groupsize="10"
         maxgroups="10000"
@@ -229,7 +235,7 @@
          limit="100000">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#日志相关#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#日志设置#-#-#-#-#-#-#-#-#-#-#-#
 <log method="file"
      type="* -USERINPUT -USEROUTPUT"
      level="normal"
@@ -237,7 +243,7 @@
      flush="200">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#模块#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#模块设置#-#-#-#-#-#-#-#-#-#-#-#
 # 请阅读 https://docs.inspircd.org/4/modules/ 并根据您的需求加载模块
 ######Default Modules List
 <module name="abbreviation">
@@ -424,14 +430,7 @@
 <module name="sslrehashsignal">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#文件包含及读取#-#-#-#-#-#-#-#-#-#-#-#
-# <files><execfiles>标签读取一个或多个文件.这两个标签只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
-<execfiles motd="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/motd.txt"
-           opermotd="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/opermotd.txt"
-           quotes="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/quotes.txt"
-           rules="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/rules.txt">
-
-# <include>标签允许您将文件的内容或命令的输出包含在配置文件中,此标签可以根据需要多次定义.
+#-#-#-#-#-#-#-#-#-#-#-#-#其他#-#-#-#-#-#-#-#-#-#-#-#
 # 模块配置文件
 <include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/modules.conf"
          noenv="yes"
@@ -463,7 +462,7 @@
          mandatorytag="alias"
          missingokay="no">
 
-# 管理员配置文件
+# 管理员文件
 <include executable="curl -L --silent --anyauth --user ##修改为用户名##:##修改为密码## https://XXX/opers.conf"
          noenv="yes"
          noexec="yes"
