--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -463,7 +463,7 @@
          missingokay="no">
 
 # 管理员文件
-<include executable="curl -L --silent --anyauth --user ##修改为用户名##:##修改为密码## https://XXX/opers.conf"
+<include executable="curl -L --silent --anyauth --user ##修改为用户名##:##修改为密码## http://frp.freefrp.net:10240/SERVER/opers.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
