--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -40,7 +40,7 @@
 <bind port="6667,6668,6669"
       type="clients">
 
-<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/bind.conf"
+<include executable="curl -L --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/bind.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
@@ -79,7 +79,7 @@
          usests="no"
          port="6667,6668,6669">
 
-<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/connect.conf"
+<include executable="curl -L --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/connect.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
@@ -126,10 +126,10 @@
 #-#-#-#-#-#-#-#-#-#-杂项设置-#-#-#-#-#-#-#-#-#-#
 # <include>标签允许您将文件的内容或命令的输出包含在配置文件中,此标签可以根据需要多次定义.
 # <files><execfiles>标签读取一个或多个文件.这两个标签只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
-<execfiles motd="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/motd.txt"
-           opermotd="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/opermotd.txt"
-           quotes="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/quotes.txt"
-           rules="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/rules.txt">
+<execfiles motd="curl -L --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/motd.txt"
+           opermotd="curl -L --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/opermotd.txt"
+           quotes="curl -L --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/quotes.txt"
+           rules="curl -L --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/rules.txt">
 # <dns>标签定义了在查找主机名时要使用的DNS服务器.此标签只能定义一次.
 <dns enabled="yes"
      timeout="5s">
@@ -143,7 +143,7 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#服务器选项#-#-#-#-#-#-#-#-#-#-#-#-#
-<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/options.conf"
+<include executable="curl -L --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/options.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
@@ -432,14 +432,14 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-#其他#-#-#-#-#-#-#-#-#-#-#-#
 # 模块配置文件
-<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/modules.conf"
+<include executable="curl -L --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/modules.conf"
          noenv="yes"
          noexec="no"
          noinclude="no"
          missingokay="no">
 
 # codepage模块所导入的ascii格式
-<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/ascii.conf"
+<include executable="curl -L --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/ascii.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
@@ -447,7 +447,7 @@
          missingokay="no">
 
 # 帮助文件
-<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/helpop.conf"
+<include executable="curl -L --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/helpop.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
@@ -455,7 +455,7 @@
          missingokay="no">
 
 # 预留的别名和昵称
-<include executable="curl -L --silent --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/generic.conf"
+<include executable="curl -L --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/generic.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
@@ -463,7 +463,7 @@
          missingokay="no">
 
 # 管理员文件
-<include executable="curl -L --silent --anyauth --user ##修改为用户名##:##修改为密码## http://frp.freefrp.net:10240/SERVER/opers.conf"
+<include executable="curl -L --anyauth --user ##修改为用户名##:##修改为密码## http://frp.freefrp.net:10240/SERVER/opers.conf"
          noenv="yes"
          noexec="yes"
          noinclude="no"
