--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -44,7 +44,7 @@
          noenv="yes"
          noexec="yes"
          noinclude="no"
-         mandatorytag="connect"
+         mandatorytag="bind"
          missingokay="no">
 
 
