--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -189,12 +189,19 @@
          saveperiod="5s"
          backoff="2"
          maxbackoff="5m">
-
-<wsorigin allow="http://*.*">
+<sslinfo hash="sha-256"
+         localsecure="no"
+         operonly="yes"
+         warnexpiring="1w"
+         welcomemsg="no">
+<wsorigin allow="https://*.*">
 <websocket defaultmode="text" 
            nativeping="yes" 
            proxyranges="*"> 
-
+<sts host="*"
+     duration="60d"
+     port="6697"
+     preload="yes">
 <gateway type="webirc"
          password="$2a$12$hLhV4qchwBSsfshDkOC95e1QZ22DySloJPfgDmGZBtKDuHlwdFmhO"
          hash="bcrypt"
@@ -205,12 +212,39 @@
 # 注意: 对于这些预编译模块中的路径使用 官方建议使用绝对路径 如:&dir.config;/conf/XXX.xxx
 #-#-#-#-#-#-#-#-#-#Extra 模块配置-#-#-#-#-#-#-#-#
 # 请自行参考官方配置后补充配置 对应模块:argon2 // geo_maxmind
-
+<maxmind file="&dir.config;/conf/GeoLite2-Country.mmdb">
 
 #-#-#-#-#-#-#-#-#-#SSL/TLS-#-#-#-#-#-#-#-#
 # 请自行参考官方配置后补充配置 对应模块:ssl_openssl // ssl_gnutls // ircv3_sts // sslrehashsignal
-
+<gnutls onrehash="yes">
+<sslprofile name="Clients"
+            provider="gnutls"
+            certfile="&dir.config;/conf/ssl/cert.pem"
+            keyfile="&dir.config;/conf/ssl/key.pem" 
+            priority="NORMAL">
+<sslprofile name="Websocket"
+            provider="gnutls"
+            certfile="&dir.config;/conf/ssl/cert.pem"
+            keyfile="&dir.config;/conf/ssl/key.pem"
+            priority="NORMAL"
+            requestclientcert="no">
+<sslprofile name="Servers"
+            provider="gnutls"
+            certfile="&dir.config;/conf/ssl/cert.pem"
+            keyfile="&dir.config;/conf/ssl/key.pem" 
+            priority="NORMAL">
 
 #-#-#-#-#-#-#-#-#-#数据库/认证/LDAP-#-#-#-#-#-#-#-#
 # 请自行参考官方配置后补充配置 对应模块:sqlite3 // mysql // pgsql // ldap
-
+<database module="sqlite"
+          id="auth"
+          hostname="&dir.config;/conf/auth.sq3">
+<sqloper dbid="auth"
+         query="SELECT name,password,hash,host,type FROM oper WHERE active=1 AND type IS NOT NULL LIMIT 1">
+<sqlauth column="passwd"
+         kdf="bcrypt"
+         dbid="auth"
+         killreason="密码错误,如果登录失败次数多 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取帮助"
+         query="SELECT * FROM user WHERE name='$nick' LIMIT 1"
+         verbose="no">
+<mkpasswd operonly="no">
