--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -17,12 +17,12 @@
 <define name="ConfPath" value="conf">
 <define name="TxtPath" value="txt">
 # 定义域名[此项的value需要修改为您的irc域名]
-<define name="Domain" value="arkfuture.test">
+<define name="HostName" value="irc.arkfuture.test">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#服务器信息#-#-#-#-#-#-#-#-#-#-#-#-#
 # <server>标签定义了本地服务器的设置.此标签只能定义一次.
-<server name="&Domain;"
+<server name="&HostName;"
         description="ARKFUTURE-NET IRC server"
         network="ARKFUTURE"
         id="0AF">
