--- a/ARKFUTURE/CONFIG/other/irssi.conf
+++ b/ARKFUTURE/CONFIG/other/irssi.conf
@@ -24,7 +24,7 @@ servers = (
     tls_cert = "";
   },
   {
-    address = "irc.hybridirc.org";
+    address = "irc.hybridirc.com";
     chatnet = "HybridIRC";
     port = "6697";
     use_tls = "yes";
