--- a/ARKFUTURE/CONFIG/other/links.conf
+++ b/ARKFUTURE/CONFIG/other/links.conf
@@ -4,21 +4,32 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-  服务器链接配置  -#-#-#-#-#-#-#-#-#-#
-<link name="hub.example.org" #远程服务器名称 必须与远程服务器的 <server:name> 值匹配
-      ipaddr="penguin.example.org" #远程服务器的 IP 地址 也可以是主机名 
-      port="7000" #连接远程服务器的端口 必须与对方服务器的服务端口匹配
-      allowmask="203.0.113.0/24 127.0.0.0/8 2001:db8::/32" #允许链接的 IP 地址范围 支持 CIDR 格式
-      timeout="5m" #定义连接超时时间 超时后尝试故障转移
-      sslprofile="Servers" #出站连接使用的 TLS 配置名称
-      bind="1.2.3.4" #本地绑定的 IP 地址
-      statshidden="no" #设置为 "no" 时 执行 /STATS c 时向管理员显示 IP
-      hidden="no" # 设置为 "yes" 时 该服务器及其子服务器不会在 /MAP 或 /LINKS 中显示
-      #sendpass/recvpass发送和接收的密码 远程服务器的密码需与本配置相反 含空格或以冒号(:)开头的密码无效
+<link
+      # 必填写! name: 远程服务器的主机名 必须与远程服务器的 <server:name> 值匹配
+      name="hub.example.org" 
+ 
+      # 必填写! ipaddr: 远程服务器的IP地址 可以是主机名 但主机名必须可解析
+      ipaddr="penguin.example.org" 
+ 
+      # 必填写! port: 连远程服务器的端口号 必须在另一服务器上作为服务器端口绑定
+      port="7000"
+ 
+      # 必填写! allowmask: 允许远程服务器的IP地址范围 可使用CIDR格式
+      allowmask="203.0.113.0/24 127.0.0.0/8 2001:db8::/32"
+ 
+      # timeout: 如定义 此选项设置服务器在认定连接尝试失败 并尝试故障转移前的等待时间
+      timeout="5m"
+ 
+      # sslprofile: 如定义 指定建立到远程服务器的出站连接时的SSL配置
+      sslprofile="Servers"
+ 
+      # statshidden: 定义执行 /STATS c 命令时 是否向运维人员显示IP
+      statshidden="no"
+ 
+      # hidden: 设为 yes 时 用户执行 /MAP 或 /LINKS 将隐藏显示
+      hidden="no"
+ 
+      # 必填写! pass: 发送和接收的密码 远程服务器需反向配置这些密码
+      # 包含空格或以冒号(:)开头的密码无效
       sendpass="outgoing!password"
       recvpass="incoming!password">
-
-<autoconnect period="10m" server="hub.example.org"> 
-
-#-#-#-#-#-#-#-#-#-#-#-#  服务配置  #-#-#-#-#-#-#-#-#-#-#-#-#
-<services server="services.example.com"
-          silent="yes">
