--- a/ARKFUTURE/CONFIG/other/links.conf
+++ b/ARKFUTURE/CONFIG/other/links.conf
@@ -33,3 +33,9 @@
       # 包含空格或以冒号(:)开头的密码无效
       sendpass="outgoing!password"
       recvpass="incoming!password">
+
+<services 
+          # 服务服务器的名称 您不得在此处指定普通用户可以连接的服务器
+          server="services.example.com"
+          # 是否应通知服务器作员此服务器上的用户正在连接和断开连接
+          silent="yes">
