--- a/ARKFUTURE/CONFIG/hybridircd/ircd.conf
+++ b/ARKFUTURE/CONFIG/hybridircd/ircd.conf
@@ -1,10 +1,11 @@
-/* Hybridircd conf ---UTF-8 ---Security configuration ---v8.2BasicConfigure
+/* Hybridircd conf ---UTF-8 ---Security configuration ---v8.2BasicConfigure <Unstable program!!!>
  * 这只是一个基础的设置(模板)文件 它可能需要根据您的需求进行调整
  * !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
  * 支持的注释风格 # // /**/
  * 包含文件 .include "filename" 和 .include <filename>
  * 
  * 您可以在以下文档中查询详细设置来完善此设置,我们的设置基于官方文档
+ * https://github.com/ircd-hybrid/ircd-hybrid/blob/8.2.x/doc/reference.ircd.conf
  */
 
 
@@ -13,7 +14,7 @@
  */
 serverinfo {
 	name = "irc.arkfuture.test";
-	sid = "0HY";
+	sid = "0AF";
 	description = "ARKFUTURE-NET IRC server";
 	network_name = "ARKFUTURE";
 	network_description = "ARKFUTURE-NET IRC server";
@@ -85,10 +86,7 @@ class {
  * motd {}: 允许根据客户端的来源显示不同的消息 仅适用于本地用户
  */
 motd {
-	mask = "*.at";
-	mask = "*.de";
-	mask = "*.ch";
-
+	mask = "*.*"
 	file = "/etc/ircd-hybrid/german.motd";
 };
 
@@ -116,10 +114,10 @@ listen {
 
 
 /*
- * auth {}:  允许用户连接到ircd auth{} 块可以多个
+ * auth {}:  允许用户连接到ircd 块必须按优先级顺序指定
  */
 auth {
-	user = "arkfuture@*";
+	user = "*@*";
 	#password = "letmein";
 	#encrypted = yes;
 
@@ -129,12 +127,6 @@ auth {
 	/* 用户所属的类别 */
 	class = "opers";
 
-	flags = need_password, exceed_limit, kline_exempt, xline_exempt, resv_exempt, can_flood;
-};
-
-auth {
-	user = "*@*";
-	class = "users";
 	flags = need_ident;
 };
 
@@ -144,8 +136,8 @@ auth {
  */
 operator {
 	/* name: 操作员名 */
-	name = "sheep";
-	user = "*@192.0.2.240/28";
+	name = "arkfuture";
+	user = "*@*";
 	password = "$5$x5zof8qe.Yc7/bPp$5zIg1Le2Lsgd4CvOjaD20pr5PmcfD7ha/9b2.TaUyG4";
 	encrypted = yes;
 
