--- a/ARKFUTURE/CONFIG/hybridircd/ircd.conf
+++ b/ARKFUTURE/CONFIG/hybridircd/ircd.conf
@@ -1,7 +1,7 @@
-/* Hybridircd conf ---UTF-8 ---Security configuration ---v8.2BasicConfigure <Unstable program!!!>
+/* 
+ * Hybridircd conf ---UTF-8 ---Security configuration ---v8.2BasicConfigure <Unstable program!!!>
  * 这只是一个基础的设置(模板)文件 它可能需要根据您的需求进行调整
  * !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
- * 支持的注释风格 # // /**/
  * 包含文件 .include "filename" 和 .include <filename>
  * 
  * 您可以在以下文档中查询详细设置来完善此设置,我们的设置基于官方文档
@@ -13,7 +13,7 @@
  * serverinfo {}:  服务器信息
  */
 serverinfo {
-	name = "irc.arkfuture.test";
+	name = "hybrid8.debian.local";
 	sid = "0AF";
 	description = "ARKFUTURE-NET IRC server";
 	network_name = "ARKFUTURE";
@@ -86,7 +86,7 @@ class {
  * motd {}: 允许根据客户端的来源显示不同的消息 仅适用于本地用户
  */
 motd {
-	mask = "*.*"
+	mask = "*";
 	file = "/etc/ircd-hybrid/german.motd";
 };
 
@@ -95,7 +95,7 @@ motd {
  * listen {}:  包含有关ircd监听端口的信息 这样的格式以此类推
  */
 listen {
-	port = 6667,6668,6669;
+	port = 6667 .. 6669;
 
 	/* 
 	 * 注意: "flags"指令始终要在"port"之前
@@ -108,7 +108,7 @@ listen {
 	 *  hidden - 端口对/stats P隐藏 除非你是管理员 
 	 */
 	flags = hidden, tls;
-	#host = "0.0.0.0";
+	host = "0.0.0.0";
 	port = 6697;
 };
 
@@ -130,13 +130,19 @@ auth {
 	flags = need_ident;
 };
 
+auth {
+	user = "*@*";
+	class = "users";
+	flags = need_ident;
+};
+
 
 /*
  * operator {}:  定义ircd操作员
  */
 operator {
 	/* name: 操作员名 */
-	name = "arkfuture";
+	name = "arkfutureuser";
 	user = "*@*";
 	password = "$5$x5zof8qe.Yc7/bPp$5zIg1Le2Lsgd4CvOjaD20pr5PmcfD7ha/9b2.TaUyG4";
 	encrypted = yes;
@@ -489,15 +495,14 @@ general {
 
 	enable_admin = no;
 
-
 	throttle_time = 2 seconds;
 };
 
 
 modules {
 	/*
-	 * path: 下面指定的模块和其他路径
-	 * 以及在 "/module load" 中搜索模块
+	 * path: 下面指定的模块和其他路径 以及在 "/module load" 中搜索模块
+	 * 
 	 */
 	path = "/usr/lib/ircd-hybrid/modules";
 #	path = "/usr/local/lib/ircd-hybrid/modules/extra";
@@ -520,5 +525,4 @@ log {
 		name = "/var/log/ircd/ircd-hybrid-oper.log";
 		size = 50 megabytes;
 	};
-
 };
