--- a/ARKFUTURE/CONFIG/hybridircd/ircd.conf
+++ b/ARKFUTURE/CONFIG/hybridircd/ircd.conf
@@ -1,5 +1,5 @@
 /* 
- * Hybridircd conf ---UTF-8 ---Security configuration ---v8.2BasicConfigure <Unstable program!!!>
+ * Hybridircd conf ---UTF-8 ---Security configuration ---v8.2BasicConfigure
  * 这只是一个基础的设置(模板)文件 它可能需要根据您的需求进行调整
  * !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
  * 包含文件 .include "filename" 和 .include <filename>
