--- a/ARKFUTURE/CONFIG/hybridircd/ircd.conf
+++ b/ARKFUTURE/CONFIG/hybridircd/ircd.conf
@@ -1,5 +1,5 @@
 /* 
- * Hybridircd conf ---UTF-8 ---Security configuration ---v8.2BasicConfigure
+ * Hybridircd conf ---UTF-8 ---Security configuration ---v8.2.43_BasicConfigure
  * 这只是一个基础的设置(模板)文件 它可能需要根据您的需求进行调整
  * !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
  * 包含文件 .include "filename" 和 .include <filename>
@@ -13,7 +13,8 @@
  * serverinfo {}:  服务器信息
  */
 serverinfo {
-	name = "hybrid8.debian.local";
+	# name值需要修改为您的irc域名(主机名)
+	name = "irc.arkfuture.test";
 	sid = "0AF";
 	description = "ARKFUTURE-NET IRC server";
 	network_name = "ARKFUTURE";
@@ -25,6 +26,7 @@ serverinfo {
 	max_nick_length = 15;
 	max_topic_length = 300;
 
+	#此项应该填写你的ssl/tls的证书
 	rsa_private_key_file = "/etc/ircd-hybrid/key/ircd.key";
 	tls_certificate_file = "/etc/ircd-hybrid/key/ircd.pem";
 	tls_dh_param_file = "/etc/ircd-hybrid/key/dhparam.pem";
@@ -87,7 +89,7 @@ class {
  */
 motd {
 	mask = "*";
-	file = "/etc/ircd-hybrid/german.motd";
+	file = "/etc/ircd-hybrid/ircd.motd";
 };
 
 
@@ -108,7 +110,7 @@ listen {
 	 *  hidden - 端口对/stats P隐藏 除非你是管理员 
 	 */
 	flags = hidden, tls;
-	host = "0.0.0.0";
+	#host = "0.0.0.0";
 	port = 6697;
 };
 
@@ -127,13 +129,13 @@ auth {
 	/* 用户所属的类别 */
 	class = "opers";
 
-	flags = need_ident;
+	#flags = need_ident;
 };
 
 auth {
 	user = "*@*";
 	class = "users";
-	flags = need_ident;
+	#flags = need_ident;
 };
 
 
@@ -142,9 +144,9 @@ auth {
  */
 operator {
 	/* name: 操作员名 */
-	name = "arkfutureuser";
+	name = "arkfuture";
 	user = "*@*";
-	password = "$5$x5zof8qe.Yc7/bPp$5zIg1Le2Lsgd4CvOjaD20pr5PmcfD7ha/9b2.TaUyG4";
+	password = "$y$j9T$ezyBJzgVcaPWLEztiCt111$YTgw44A1hHRB0UOh0.P54nZrsK96aGUCDsDu.i76aYD";
 	encrypted = yes;
 
 	/* 通过额外检查操作员的客户端证书指纹与下面指定的指纹来增强安全性 */
@@ -360,7 +362,9 @@ resv { mask = "#*services*"; reason = "Reserved for services"; };
  * channel {}:  频道块包含与频道相关的选项
  */
 channel {
-	enable_extbans = no;
+	enable_extbans = yes;
+	enable_owner = yes;
+	enable_admin = yes;
 
 	disable_fake_channels = yes;
 
@@ -397,7 +401,7 @@ serverhide {
 	hidden = no;
 	hide_servers = no;
 	hide_services = no;
-	hidden_name = "*.example.net";
+	hidden_name = "ARKFUTURE";
 	hide_server_ips = no;
 };
 
@@ -496,6 +500,13 @@ general {
 	enable_admin = no;
 
 	throttle_time = 2 seconds;
+
+	cloak_enabled = yes;
+	cloak_cidr_len_ipv4 = 32;
+	cloak_cidr_len_ipv6 = 64;
+	cloak_num_bits = 80;
+	cloak_secret = "5LdTybtvP945DLgyHiMWVxti94hcJO";
+	cloak_suffix = "AFENet";
 };
 
 
@@ -517,7 +528,7 @@ modules {
  * log {}: 包含有关日志文件的信息 file {} 块可以多个
  */
 log {
-	/* 您想启用对 ircd.log 的记录吗 */
+	/* 使用日志? */
 	use_logging = yes;
 
 	file {
