--- a/ARKFUTURE/CONFIG/ngircd/ngircd.conf
+++ b/ARKFUTURE/CONFIG/ngircd/ngircd.conf
@@ -13,7 +13,7 @@
 #-#-#-#-#-#-#-#-#-#-#-#-全局设置-#-#-#-#-#-#-#-#-#-#-#-#-#
 [Global]
     # 服务器名
-	Name = arkfuture.test
+	Name = irc.arkfuture.test
 
 	# 关于服务器和管理员的信息
 	AdminInfo1 = arkfuture
