--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -124,7 +124,7 @@
 <ojoin notice="yes"
        op="yes"
        prefix="!OP!">
-<operlog tosnomask="no">
+<operlog tosnomask="yes">
 <override noisy="no"
           requirekey="no"
           timeout="30m">
