--- a/ARKFUTURE/CONFIG/inspircd/conf/opers.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/opers.conf
@@ -1,4 +1,32 @@
-#opers -- UTF-8 
+#-#-#-#-#-#-#-#-#-#-#-#-#操作员设置#-#-#-#-#-#-#-#-#-#-#-#-#
+# <class>标签定义了一组服务器操作员特权.此标签可以根据需要定义多次
+<class name="Shutdown"
+       commands="DIE RESTART REHASH LOADMODULE UNLOADMODULE RELOADMODULE GLOADMODULE GUNLOADMODULE GRELOADMODULE">
+<class name="SACommands" 
+       commands="SAJOIN SAPART SANICK SAQUIT SATOPIC SAKICK SAMODE OJOIN">
+<class name="ServerLink"
+       commands="CONNECT SQUIT RCONNECT RSQUIT MKPASSWD ALLTIME SWHOIS">
+<class name="BanControl"
+       commands="KILL GLINE KLINE ZLINE QLINE ELINE TLINE RLINE CHECK NICKLOCK NICKUNLOCK SHUN CBAN">
+<class name="OperChat"
+       commands="WALLOPS GLOBOPS">
+<class name="HostCloak"
+       commands="SETHOST SETIDENT SETIDLE CHGNAME CHGHOST CHGIDENT">
+
+# <type>标签定义了服务器操作员的类型.此标签可以根据需要定义多次.
+<type name="NetAdmin"
+       classes="SACommands OperChat BanControl HostCloak Shutdown ServerLink"
+       vhost=""
+       level="90">
+<type name="GlobalOp"
+       classes="SACommands OperChat BanControl HostCloak ServerLink"
+       vhost=""
+       level="70">
+<type name="Helper"
+       classes="HostCloak"
+       vhost=""
+       level="50">
+
 # <oper>标签定义了一个服务器操作员帐户.此标签可以根据需要定义多次. 也可以使用其他方法(数据库/ldap)来使用管理员
 <oper name="arkfuture"
       password="$2a$12$hLhV4qchwBSsfshDkOC95e1QZ22DySloJPfgDmGZBtKDuHlwdFmhO" 
