--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -73,42 +73,6 @@
          port="6667,6668,6669">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#操作员设置#-#-#-#-#-#-#-#-#-#-#-#-#
-# <class>标签定义了一组服务器操作员特权.此标签可以根据需要定义多次
-<class name="Shutdown"
-       commands="DIE RESTART REHASH LOADMODULE UNLOADMODULE RELOADMODULE GLOADMODULE GUNLOADMODULE GRELOADMODULE">
-<class name="SACommands" 
-       commands="SAJOIN SAPART SANICK SAQUIT SATOPIC SAKICK SAMODE OJOIN">
-<class name="ServerLink"
-       commands="CONNECT SQUIT RCONNECT RSQUIT MKPASSWD ALLTIME SWHOIS">
-<class name="BanControl"
-       commands="KILL GLINE KLINE ZLINE QLINE ELINE TLINE RLINE CHECK NICKLOCK NICKUNLOCK SHUN CBAN">
-<class name="OperChat"
-       commands="WALLOPS GLOBOPS">
-<class name="HostCloak"
-       commands="SETHOST SETIDENT SETIDLE CHGNAME CHGHOST CHGIDENT">
-
-# <type>标签定义了服务器操作员的类型.此标签可以根据需要定义多次.
-<type name="NetAdmin"
-       classes="OperChat SACommands BanControl HostCloak Shutdown ServerLink"
-       host=""
-       autologin="strict"
-       vhost=""
-       level="90">
-<type name="GlobalOp"
-       classes="OperChat BanControl HostCloak ServerLink"
-       host=""
-       autologin="strict"
-       vhost=""
-       level="70">
-<type name="Helper"
-       classes="HostCloak"
-       host=""
-       autologin="strict"
-       vhost=""
-       level="50">
-
-
 #-#-#-#-#-#-#-#-#-#-杂项设置-#-#-#-#-#-#-#-#-#-#
 # <include>标签允许您将文件的内容或命令的输出包含在配置文件中,此标签可以根据需要多次定义.
 # <files><execfiles>标签读取一个或多个文件.这两个标签只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
@@ -119,7 +83,7 @@
        
 # <dns>标签定义了在查找主机名时要使用的DNS服务器.此标签只能定义一次.
 <dns enabled="yes"
-     timeout="5s">
+     timeout="3s">
 
 # <cidr>标签定义定位克隆时应查看的IP地址位数.此标签只能定义一次.
 <cidr ipv4clone="32"
@@ -464,7 +428,7 @@
          mandatorytag="alias"
          missingokay="no">
 
-
+# 操作员设置
 <include file="&ConfPath;/opers.conf"
          noenv="yes"
          noexec="yes"
